--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
 <body>
-    <p>Hello World gggg</p>
+    <header>
+        <section class="top">
+            <div class="image__block">
+                <img src="" alt="" class="image__block-img">
+                <img src="" alt="" class="image__block-img">
+                <img src="" alt="" class="image__block-img">
+            </div>
+            <div class="regist__block">
+                <img src="" alt="">
+                <a href="" class="regist__block-link"></a>
+                <span class="regist__block-span"></span>
+                <a href="" class="regist__block-link"></a>
+            </div>
+        </section>
+        <section class="bottom">
+            <div class="logo__block">
+                <a href="" class="logo__block-link">
+                    <img src="" alt="" class="logo__block-img">
+                </a>
+                <span class="logo__block-top"></span>
+                <span class="logo__block-bottom"></span>
+            </div>
+            <div class="search__block">
+                <input type="text" class="search__block-inp">
+                <button class="search__block-button"></button>
+            </div>
+            <div class="cart__block">
+                <img src="" alt="" class="cart__block-logo">
+                <span class="cart__block-text"></span>
+                <span class="cart__block-count"></span>
+            </div>
+        </section>
+    </header>
 </body>
 </html>
